async-gist, awesome panel, static header, openGL page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Hello World</title>
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="common.css">
         <link rel="import" href="bower_components/polymer/polymer.html">
+        <link rel="import" href="components/static-navbar.html">
         <link rel="import" href="components/video-player.html">
         <link rel="import" href="components/video-list.html">
     </head>
@@ -21,6 +23,9 @@
             <video-list></video-list>
 
         </div>
+        <static-navbar></static-navbar>
     </body>
     <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </html>
