--- a/opengl.html
+++ b/opengl.html
@@ -97,6 +97,15 @@
                 <div data-gist="ladrower/de703096458249766340"></div>
                 
             </awesome-panel>
+            <awesome-panel 
+                awesome-title="Tekstury" 
+                awesome-note="pages 163-231 of <a target='_blank' href='http://www.amazon.fr/OpenGL-Podstawy-programowania-grafiki-3D/dp/8328301938'>OpenGL. Podstawy programowania grafiki 3D</a>">
+
+                <awesome-quote>
+                    Retrieving the texture color using texture coordinates is called <b>sampling</b>
+                </awesome-quote>
+
+            </awesome-panel>
         </div>
         <static-navbar></static-navbar>
     </body>
