First demo video

--- a/opengl.html
+++ b/opengl.html
@@ -11,6 +11,7 @@
         <link rel="import" href="components/static-navbar.html">
         <link rel="import" href="components/awesome-panel.html">
         <link rel="import" href="components/awesome-quote.html">
+        <link rel="import" href="components/video-player.html">
     </head>
     <body class="bg-warning">    
         <div class="container">
@@ -106,6 +107,14 @@
                 </awesome-quote>
 
             </awesome-panel>
+
+            <awesome-panel 
+                awesome-title="Coordinate System" 
+                awesome-note="">
+
+                <video-player title="OpenGL Course Demo 0 " yid="0xUVurcEoqU"></video-player>
+            </awesome-panel>
+
         </div>
         <static-navbar></static-navbar>
     </body>
